--- a/package.json
+++ b/package.json
@@ -12,11 +12,10 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-tap-event-plugin": "^2.0.1",
-    "request": "^2.81.0"
-  },
-  "devDependencies": {
+    "request": "^2.81.0",
     "react-scripts": "0.9.5"
   },
+  "devDependencies": {},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
